fixing site url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
     <a href="{{ site.url }}" class="top-link">{{ site.name }}</a>
       <ul class="nav">
         <!--Change the  URL here if working on an absolute domain-->
-        <li><a href="alexminnaar.com">Blog</a></li>
-        <li><a href="alexminnaar.com/about">About Me</a></li>
+        <li><a href="www.alexminnaar.com">Blog</a></li>
+        <li><a href="www.alexminnaar.com/about">About Me</a></li>
         {% if site.owner.github %}
           <li><a href="{{ site.owner.github }}" target="_blank">Github</a></li>
         {% endif %}
