fixing site url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <a href="{{ site.url }}" class="top-link">{{ site.name }}</a>
       <ul class="nav">
         <!--Change the  URL here if working on an absolute domain-->
-        <li><a href="">Blog</a></li>
+        <li><a href="/">Blog</a></li>
         <li><a href="/about">About Me</a></li>
         {% if site.owner.github %}
           <li><a href="{{ site.owner.github }}" target="_blank">Github</a></li>
