--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,31 @@
 <div class="header-container container">
   <header>
+<div style='float: right;'>
+    {% if site.owner.github %}  
+    <a href="{{ site.owner.github }}" class="social-media-icons"><i class="fa fa-2x fa-github-square" aria-hidden="true"></i></a>
+  {% endif %}  
+  {% if site.owner.linkedin %}
+    <a href="{{ site.owner.linkedin }}" class="social-media-icons"><i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
+  {% endif %}
+  {% if site.owner.email %}
+    <a href="mailto:{{ site.owner.email }}" class="social-media-icons"><i class="fa fa-2x fa-envelope-square" aria-hidden="true"></i></a>
+  {% endif %}
+  {% if site.owner.twitter %}  
+    <a href="https://twitter.com/{{ site.owner.twitter }}" class="social-media-icons"><i class="fa fa-2x fa-twitter-square" aria-hidden="true"></i></a>
+  {% endif %}
+
+</div>
+
+
     <a href="/" class="top-link">{{ site.name }}</a>
+
       <ul class="nav">
         <!--Change the  URL here if working on an absolute domain-->
         <li><a href="/">Blog</a></li>
         <li><a href="/about">About Me</a></li>
-        {% if site.owner.github %}
-          <li><a href="{{ site.owner.github }}" target="_blank">Github</a></li>
-        {% endif %}
 
 <!--         <li><a href="{{ site.url }}/feed.xml">RSS</a></li>
  -->      </ul>
+
   </header>
 </div>
