fixing title tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>{{ site.description }}</title>
+<title>{{ page.title }} | Alex Minnaar's Blog</title>
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 {% if page.tags %}<meta name="keywords" content="{{ page.tags | join: ', ' }}">{% endif %}
 {% if site.owner.twitter %}<!-- Twitter Card and Open Graph tags -->
