--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,18 +4,20 @@
 <div class="pagination">
   
   {% if paginator.next_page %}
-    <a href="{{site.url}}/page{{paginator.next_page}}" class="older"><span class="mega-octicon octicon-playback-{% if site.rtl %}fast-forward{% else %}rewind{% endif %}" style="min-width: 32px;"></span></a>
+    <a href="{{site.url}}/page{{paginator.next_page}}" class="older"><span class="mega-octicon octicon-playback-{% if site.rtl %}fast-forward{% else %}rewind{% endif %}" style="min-width: 32px;"> older posts</span></a>
   {% else %}
-    <span class="next"><span class="mega-octicon octicon-playback-{% if site.rtl %}fast-forward{% else %}rewind{% endif %}" style="min-width: 32px;"></span></span>
+    <span class="next"><span class="mega-octicon octicon-playback-{% if site.rtl %}fast-forward{% else %}rewind{% endif %}" style="min-width: 32px;"> older posts </span></span>    &nbsp;&nbsp;
+
   {% endif %}
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
-      <a href="{{site.url}}/" class="newer"><span class="mega-octicon octicon-playback-{% if site.rtl %}rewind{% else %}fast-forward{% endif %}" style="min-width: 32px;"></span></a>
+      <a href="{{site.url}}/" class="newer mega-octicon" style="min-width: 32px;"> newer posts<span class="mega-octicon octicon-playback-{% if site.rtl %}rewind{% else %}fast-forward{% endif %}" style="min-width: 32px;"></span></a>
     {% else %}
       <a href="{{site.url}}/page{{paginator.previous_page}}" class="newer"><span class="mega-octicon octicon-playback-{% if site.rtl %}rewind{% else %}fast-forward{% endif %}" style="min-width: 32px;"></span></a>
     {% endif %}
   {% else %}
-    <span class="previous"><span class="mega-octicon octicon-playback-{% if site.rtl %}rewind{% else %}fast-forward{% endif %}" style="min-width: 32px;"></span></span>
+    &nbsp;&nbsp;
+<span class="previous mega-octicon"> newer posts<span class="mega-octicon octicon-playback-{% if site.rtl %}rewind{% else %}fast-forward{% endif %}" style="min-width: 32px;"></span></span>
   {% endif %}
 </div>
 {%  endif %}
